[package]
name = "pthread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/qy3u/pthread"
homepage = "https://github.com/qy3u/pthread"
documentation = "https://github.com/qy3u/pthread"
description = "pthread"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.126"
